[project]
name = "my-langgraph-agent"
version = "0.1.0"
description = "LangGraph agent application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.22",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.4.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents", "src/api"]